Fix actions without damage or effects not showing

--- a/less/actors.less
+++ b/less/actors.less
@@ -1102,13 +1102,18 @@
       align-items: center;
 
       &.item-actions {
-        flex: 0 0 54px;
+        flex: 0 0 50px;
         padding: 0 1px 0 1px;
         justify-content: center;
 
         & > div {
           flex: 0 0 16px;
         }
+      }
+
+      &.item-slot {
+        flex: 0 0 54px;
+        padding: 0 1px 0 1px;
       }
 
       &.item-usage {
@@ -1127,7 +1132,7 @@
       }
 
       &.item-weight {
-        flex: 0 0 54px;
+        flex: 0 0 50px;
         padding: 0 1px 0 1px;
       }
 
@@ -1137,12 +1142,12 @@
       }
 
       &.item-carried {
-        flex: 0 0 62px;
+        flex: 0 0 50px;
         padding: 0 1px 0 1px;
       }
 
       &.item-equipped {
-        flex: 0 0 70px;
+        flex: 0 0 50px;
         padding: 0 1px 0 1px;
       }
 
